force-app/main/default/objects/Aqua_Watering_Schedule__c/Aqua_Watering_Schedule__c.object-meta.xml
<CustomObject>
    <label>Aqua Watering Schedule</label>
    <nameField>
        <displayFormat>AWS-{000000}</displayFormat>
        <label>Schedule ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Aqua Watering Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>