force-app/main/default/objects/Aqua_Watering_Schedule__c/fields/Community__c.field-meta.xml
<CustomField>
    <fullName>Community__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Community is an Opportunity per the data model: Builder Market Account -&gt; Community (Opportunity) -&gt; Work Order. Aqua tickets reference the same Opportunity, so watering schedules use the same parent type for clean joins.</description>
    <label>Community</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Aqua Watering Schedules</relationshipLabel>
    <relationshipName>Aqua_Watering_Schedules</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>