force-app/main/default/objects/Aqua_Watering_Schedule__c/fields/Effective_Year__c.field-meta.xml
<CustomField>
    <fullName>Effective_Year__c</fullName>
    <label>Effective Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>