force-app/main/default/objects/Aqua_Watering_Schedule__c/fields/Run_Duration_Min__c.field-meta.xml
<CustomField>
    <fullName>Run_Duration_Min__c</fullName>
    <label>Run Duration (Min)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>