force-app/main/default/objects/Aqua_Watering_Schedule__c/fields/Run_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Run_Frequency__c</fullName>
    <label>Run Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Every Other Day</fullName>
            </value>
            <value>
                <fullName>3x Per Week</fullName>
            </value>
            <value>
                <fullName>2x Per Week</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>As Needed</fullName>
            </value>
            <value>
                <fullName>3x/day</fullName>
            </value>
            <value>
                <fullName>1x/day</fullName>
            </value>
            <value>
                <fullName>3x/week</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>