force-app/main/default/objects/Aqua_Watering_Schedule__c/fields/Run_Time_Pct__c.field-meta.xml
<CustomField>
    <fullName>Run_Time_Pct__c</fullName>
    <label>Run Time %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>