force-app/main/default/objects/Aqua_Watering_Schedule__c/fields/Schedule_Type__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Type__c</fullName>
    <label>Schedule Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New Install Ramp</fullName>
            </value>
            <value>
                <fullName>Seasonal Monthly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>