force-app/main/default/objects/Aqua_Watering_Schedule__c/fields/Service_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Service_Ticket__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links this watering schedule to the Service Ticket that governs its execution scope.</description>
    <label>Service Ticket</label>
    <referenceTo>Service_Ticket__c</referenceTo>
    <relationshipLabel>Aqua Watering Schedules</relationshipLabel>
    <relationshipName>Aqua_Watering_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>