force-app/main/default/objects/Aqua_Watering_Schedule__c/validationRules/Ramp_Fields_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Ramp_Fields_Required</fullName>
    <active>true</active>
    <description>New Install Ramp type requires Week Number, Run Frequency, and Run Duration.</description>
    <errorConditionFormula>AND(
  ISPICKVAL(Schedule_Type__c, &quot;New Install Ramp&quot;),
  OR(
    ISNULL(Week_Number__c),
    ISBLANK(TEXT(Run_Frequency__c)),
    ISNULL(Run_Duration_Min__c)
  )
)</errorConditionFormula>
    <errorDisplayField>Week_Number__c</errorDisplayField>
    <errorMessage>New Install Ramp schedule requires Week Number, Run Frequency, and Run Duration Min.</errorMessage>
</ValidationRule>